# multicultural-alignment

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
output/: all-language-requests.jsonl  all_lang_model_responses_with_scores.csv  country_languages.csv  demographic-all_prompts_responses.csv  demographic-analysis-responses.jsonl  demographic-gemma-results.csv  example-json-prompts.jsonl  ground_truth.csv  ground_truth_all_countries.csv  ground_truth_every_country.csv  ground_truth_global.csv  ground_truth_per_language.csv  gt_self_consistency.csv  latest_results_with_baseline.csv  multilingual_benchmarks.csv  olmo-analysis-responses.jsonl  spearman_n1000_demographic_analysis.csv  stance_labels.json  translated_prompts_with_english_no_controversy.csv
prompts/: clean_english_prompts.csv  prompt_templates.txt  topic_variations_en.json
scripts/: analyse_cross_effects.py  analyse_hypotheses.py  analyze_batch.py  analyze_demographic_nonbatch.py  annotate_responses_demographic.py  annotate_responses_olmo.py  batch_analyse_responses.py  demographic-prompting.py  get_example.py  inter-llm-reliability.py  openai_batch_responses.py  plot_consistency.py  plot_language_analyses.py  plot_multilingual_benchmarks.py  plot_us_centric_bias.py  plot_wvs_data.py  prepare_data_for_hf.py  process_wvs.py  reproduce_plots.sh  translate_prompts.py  vllm_batch_responses.py
supplementary/: README.md  assumption_check.md  conditioning_language.md  experiment_cost.md  language_breakdown.md  llm_descriptions.md  multilingual_capability_table.md  (+3 more)
(+16 files in other folders)
